--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <span class="exp-meta">Full-time &bull; 9 mos</span>
                         <ul class="exp-roles">
                           <li>
-                            <span class="exp-role-title">Co Convenor - Technical Wing, Sports Council</span><br>
+                            <span class="exp-role-title">Convenor - Technical Wing, Sports Council</span><br>
                             <span class="exp-role-date">May 2025 – Present</span>
                           </li>
                           <li>
